// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkOverlay should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with foregroundContent 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    >
      <span>
        Skyscanner
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={bottomHigh} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={bottomLow} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={bottomMedium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={leftHigh} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={leftLow} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={leftMedium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={off} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={rightHigh} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={rightLow} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={rightMedium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={solidHigh} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={solidLow} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={solidMedium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={topHigh} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={topLow} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={topMedium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={vignette} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper custom-classname"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay"
    />
  </div>
</DocumentFragment>
`;
